--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Release Recipe Tracker
 
 on:
   push:
@@ -48,7 +48,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository }}/recipetracker:${{ github.ref_name }} .
+        run: docker build -t ghcr.io/${{ github.repository }}:${{ github.ref_name }} .
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository }}/recipetracker:${{ github.ref_name }}
+        run: docker push ghcr.io/${{ github.repository }}:${{ github.ref_name }}
