--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,12 +43,12 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.io
+          username: ${{ secrets.DOCKER_HUB_REGISTRY_USER }}
+          password: ${{ secrets.DOCKER_HUB_REGISTRY_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/jonasmh/recipetracker:${{ github.ref_name }} .
+        run: docker build -t jonasmh/recipetracker:${{ github.ref_name }} .
 
       - name: Push Docker image
-        run: docker push ghcr.io/jonasmh/recipetracker:${{ github.ref_name }}
+        run: docker push jonasmh/recipetracker:${{ github.ref_name }}
