--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "isbot": "^5.1.27",
+    "luxon": "^3.6.1",
     "marked": "^15.0.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
+    "@types/luxon": "^3.6.2",
     "@types/marked": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
